--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
 
-    <title>Cent Fusion</title>
+    <title>Система управления имуществом CENT</title>
   </head>
   <body>
     <div id="app"></div>
